update emailbuilder and messenger translation

--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -10,7 +10,7 @@ The *CRM » Messenger (Test phase)* menu allows you to manage the external commu
 .Complete assistant only for sending and receiving emails via messenger
 ====
 If you want to use the messenger for sending and receiving emails, you have to complete the *Messenger configuration* <<#complete-assistant, assistant>> in the *Setup » Assistants » Basic setup*. +
-If you only want to whisper messages which means that you use the messenger as notes only without sending and receiving emails via the messenger, you do _not_ have to complete the *Messenger configuration* assistant. 
+If you only want to whisper messages which means that you use the messenger as notes only without sending and receiving emails via the messenger, you do _not_ have to complete the *Messenger configuration* assistant.
 ====
 
 The *CRM » Messenger (Test phase)* menu is structured as follows:
@@ -92,7 +92,7 @@ include::_includes:page$tags-search.adoc[]
 .Complete assistant only for sending and receiving emails via messenger
 ====
 If you want to use the messenger for sending and receiving emails, you have to complete the *Messenger configuration* <<#complete-assistant, assistant>> in the *Setup » Assistants » Basic setup*. +
-If you only want to whisper messages which means that you use the messenger as notes only without sending and receiving emails via the messenger, you do _not_ have to complete the *Messenger configuration* assistant. 
+If you only want to whisper messages which means that you use the messenger as notes only without sending and receiving emails via the messenger, you do _not_ have to complete the *Messenger configuration* assistant.
 ====
 
 To be able to send and receive messages with the Messenger, you have to complete the *Messenger configuration* assistant in the *Setup » Assistants » Basic setup* menu. This assistant has several steps to complete. These steps are explained in the following.
@@ -104,26 +104,32 @@ You can assign tags to each inbox to be able to <<#search-conversation, filter>>
 [#service-activation]
 ==== Service activation
 
-In this step, activate the Messenger service for this inbox. If the button is blue (material:toggle_on[role=skyBlue]), the service is activated. If the button is grey (material:toggle_off[]), the service is _not_ activated.
+In the *Service activation* step, activate the Messenger service for this inbox. If the button is blue (material:toggle_on[role=skyBlue]), the service is activated. If the button is grey (material:toggle_off[]), the service is _not_ activated.
 
 If you later activate multiple inboxes, which means that you completed the assistant multiple times for the individual inboxes, you can deactivate the corresponding inbox again in this step.
 
 [#email-forwarding]
 ==== Email forwarding
 
-In this step, a cryptic email address is automatically created that builds the forwarding email address. Use this email address to set up your email client. This ensures that your emails will be forwarded automatically. Note that you _cannot_ change this cryptic email address.
+In the *Email forwarding* step, a cryptic email address is automatically created that builds the forwarding email address. Use this email address to set up your email client. This ensures that your emails will be forwarded automatically. Note that you _cannot_ change this cryptic email address.
 
 In the lower part, enter all email addresses that are allowed to send messages to the cryptic, forwarding email address stated above. You can add as many email addresses as you like by clicking on *Add new entry* (material:add[]). Existing email addresses can be deleted by clicking on *Remove entry* (material:delete[]). *_Note:_* At least one email address has to be entered here.
+
+//// 
+[#verifizierung-e-mail-adressen]
+==== Verifizierung der E-Mail-Adressen
+
+In this step, you can see the progress of the verification process. plentymarkets sends an email to all email addresses that you entered in the previous step <<#email-forwarding, Email forwarding>>. The system then checks whether the email addresses are valid and the forwarding works correctly.
+////
 
 [#settings-email-despatch]
 ==== Settings for sending emails
 
-In this step, save the login details of the email inbox that you want to use to send emails from. This is necessary to make sure that your plentymarkets system is able to send and receive emails via the messenger.
+In the *Settings for sending emails* step, save the login details of the email inbox that you want to use to send emails from. This is necessary to make sure that your plentymarkets system is able to send and receive emails via the messenger. 
 
 After having entered the login details, select the encryption method and enter the sender email address and the sender name. This email address and this name will be shown to the recipients of your emails from this inbox.
 
 *_Note for mailbox.org mailboxes:_* Enter the port *465* and select *SSL* as encryption method.
-
 
 ////
 TODO: ggf. neue Tabelle einfügen mit aktuellen Zahlen analog zu dieser Tabelle hier: https://knowledge.plentymarkets.com/crm/e-mails-versenden#200
@@ -170,7 +176,7 @@ The following Messenger-related variables are available in the EmailBuilder:
 [#settings-email-receipt]
 ==== Settings for receiving emails
 
-In this step, select one or multiple tags that should be assigned to the messages when these messages are received from and sent to the forwarded addresses.
+In the *Settings for receiving emails* step, select one or multiple tags that should be assigned to the messages when these messages are received from and sent to the forwarded addresses.
 
 In the last section, select the subscribers who should be informed in case of new messages. Either select individual users from the drop-down list or select roles in order that all users that are assigned to this role will subscribe for new messages in this inbox.
 
@@ -180,6 +186,22 @@ In the last section, select the subscribers who should be informed in case of ne
 To be able to send messages with the messenger, it is required that the live mode in the *Email accounts* assistant in the *Login details* step is activated (material:check_box[role=skyBlue]).
 
 Setting the test mode to *inactive* can be done in this step without having to leave the assistant. To do so, select (material:check_box[role=skyBlue]) the option *Activate live mode*.
+
+[#collect-messages]
+=== Collecting messages in the messenger
+
+In the *Messenger integration* step of the *Email accounts* assistant, you can determine whether all sent emails and attachments should be collected in the messenger. Furthermore, you can decide in which inbox the emails should be collected and which tags should be assigned to the conversations.
+
+If you activate the service to collect the emails, the emails from the following plentymarkets areas will be saved and shown in the messenger: 
+
+* Automatic despatch
+* Order events
+* Order procedures
+* Group function in the contact data record
+* Orders » Orders » Orders (Test phase)
+* Group function in the order
+
+You can find the *Email accounts* assistant in the *Setup » Assistants » Basic setup* menu. For further information about collecting the emails, refer to the xref:crm:emailbuilder.adoc#email-messenger-integration[Messenger integration] chapter on the xref:crm:emailbuilder.adoc#[EmailBuilder (Test phase)] page.
 
 [#create-message]
 == Creating a new message
@@ -193,8 +215,8 @@ Creating a message:
 . In the top left corner, click on material:add[] *New message*.
 . Enter a value in the *Add receiver...* field and select the appropriate value from the suggestion list. +
 *_Example:_* If you enter a number, possible receivers with this order ID or contact ID will be suggested (see <<#image-messenger-new-message-suggestion-list>>).
-. Select a template from the list.
-. Select the template language.
+// . Select a template from the list.
+// . Select the template language.
 . Enter the subject of the message in the *Subject* field.
 . Select the inbox from the drop-down list.
 . Enter the message in the text field.
@@ -216,16 +238,16 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |[#intable-recipients]*Recipients*
 |Enter a name or ID here and select the appropriate value from the suggestion list (see <<#image-messenger-new-message-suggestion-list>>).
 
-|[#intable-template]*Template*
-|Select a template from the list. The list shows all templates that you created in the xref:crm:emailbuilder.adoc#[EmailBuilder]. +
-*_Tip:_* Enter at least 3 characters to see a suggestion list with already available email templates. +
-*_Note:_* If you click on <<#intable-refresh-template, Refresh template>>, the content of the template and the subject saved in this template are shown.
+// |[#intable-template]*Template*
+// |Select a template from the list. The list shows all templates that you created in the xref:crm:emailbuilder.adoc#[EmailBuilder]. +
+// *_Tip:_* Enter at least 3 characters to see a suggestion list with already available email templates. +
+// *_Note:_* If you click on <<#intable-refresh-template, Refresh template>>, the content of the template and the subject saved in this template are shown.
 
-|[#intable-template-language]*Template language*
-|Select the template language.
+// |[#intable-template-language]*Template language*
+// |Select the template language.
 
-|[#intable-refresh-template]*Refresh template*
-|Click on material:refresh[] to refresh the content of the template. For example, the content of the selected template and its subject will be shown.
+// |[#intable-refresh-template]*Refresh template*
+// |Click on material:refresh[] to refresh the content of the template. For example, the content of the selected template and its subject will be shown.
 
 |[#intable-inbox]*Inbox*
 |Select an inbox from the drop-down list. The list shows the names of the inboxes that you set up by <<#complete-assistant, completing the assistant>>.
@@ -258,6 +280,9 @@ Click on material:pause_circle[] to stop the timer or on material:play_circle[] 
 
 |[#intable-manage-inboxes]*Manage inboxes* (material:more_vert[])
 |First, click on material:more_vert[] and then on material:edit[] *Manage inboxes*. You will be redirected to the *Setup » Assistants » Basic setup* menu. Here, you can edit the inboxes via the available *Messenger configuration* <<#complete-assistant, assistants>>.
+
+//|[#intable-name-inbox]_Name of the currently selected inbox_
+//| Click on material:arrow_drop_down[] to select another inbox from the drop-down list. The list shows the names of the inboxes that you set up by <<#complete-assistant, completing the assistant>>.
 
 |[#intable-send]*SEND*
 |By clicking on material:forward_to_inbox[role=skyBlue] *SEND*, the message will be sent. +
@@ -420,7 +445,7 @@ Possible values:
 |[#intable-overview-relations]*Relations*
 a|The conversation relations are shown here, for example:
 
-* material:person[] _Name of the contact (contact ID)_
+* material:person[] _Name of the contact (contact ID)_ 
 * material:shopping_cart[] _Order ID_
 ** Depending on whether it is a normal xref:orders:managing-orders.adoc#[order], a xref:orders:subscription.adoc#[subscription] or a xref:stock-management:managing-reorders.adoc#[reorder], you will be redirected to the corresponding menu when clicking on the ID within the conversation.
 * material:mail[] _Email address_
@@ -470,9 +495,11 @@ Click on *Configure columns* (material:settings[]) on the top right to deactivat
 [#reply-to-message]
 == Replying to a message
 
-Search the <<#search-conversation, conversation>> that contains the message you want to reply to. Click on the message to reply to it. When replying to an existing message, you can see all recipients that will receive this message. You can add more recipients. If desired, select a template from the drop-down list *Template* and a template language.
+Search the <<#search-conversation, conversation>> that contains the message you want to reply to. Click on the message to reply to it. When replying to an existing message, you can see all recipients that will receive this message. You can add more recipients.
 
-The only difference to <<#create-message, creating a message>> is that you can show and hide the subject line when replying to an existing message by clicking on the symbol material:more_vert[] (see <<#image-messenger-reply-to-message>>).
+// If desired, select a template from the drop-down list *Template* and a template language.
+
+The only difference to <<#create-message, creating a message>> is that you can show and hide the subject line when replying to an existing message by clicking on the symbol material:more_vert[] (see <<#image-messenger-reply-to-message>>). 
 
 [[image-messenger-reply-to-message]]
 .Replying to a message
@@ -489,8 +516,7 @@ TODO: wieder einfügen, wenn diese Funktion wieder eingebaut wurde.
 It is possible to change the view in the Messenger from a table to a list. To do so, click on *Change view* (material:list[]) in the top right of the overview. +
 The table view is selected by default.
 
-The selected conversation with all the messages contained therein is shown in the lower left section and the editor to reply to the messages is shown in the lower right section.
-The selected conversation with all the messages contained therein is shown in the upper right section and the editor to reply to the messages is shown in the lower right section.
+The selected conversation with all the messages contained therein is shown in the lower left section and the editor to reply to the messages is shown in the lower right section. The selected conversation with all the messages contained therein is shown in the upper right section and the editor to reply to the messages is shown in the lower right section.
 ////
 
 ////
@@ -706,6 +732,10 @@ Subscribing for a conversation:
 . Click on material:notifications_active[] *Subscribe for conversation*. +
 → In the column material:notifications[] *Subscribed*, the symbol material:done[] is shown.
 
+////
+TODO: ist das korrekt? → Du erhältst oben rechts in deinem plentymarkets Backend eine Benachrichtigung über das Symbol material:notifications[].
+////
+
 [#unsubscribe-conversation]
 ==== Unsubscribing from a conversation
 
@@ -843,16 +873,20 @@ Assigning tags to the message:
 *_Tip:_* If you have created a lot of tags for the *Messages* or *Messages (billable)* areas, enter the name of the tag in the search field *Search for tag*.
 . Select (material:check_box[role=skyBlue]) the tags that you want to assign to the message. 
 
+////
+TODO: FRAGE: Wenn nur die Nachricht den Tag erhält, wie verhält es sich dann mit den Filtern in der Suche? Wird der Tag an einzelnen Nachrichten in der Suche berücksichtigt? 
+////
+
 [#attachments-single-message]
 === Downloading attachments
 
-You can either download the attachments of the message one by one or download all attachments of the message as a ZIP file to your computer.
+You can either download the attachments of the message one by one or download all attachments of the message as a ZIP file to your computer. 
 
 [.instruction]
 Downloading attachments:
 
 . Go to *CRM » Messenger (Test phase)*.
-. Open the conversation that contains the message whose attachment(s) you want to download.
+. Open the conversation that contains the message whose attachment(s) you want to download.  
 . Open the message by clicking in the line of the message.
 . Click on material:more_vert[].
 . Click on material:attach_file[] *Attachments*.
@@ -868,13 +902,17 @@ Proceed as described below to delete a single message.
 Deleting a message:
 
 . Go to *CRM » Messenger (Test phase)*.
-. Open the conversation that contains the message you want to delete.
+. Open the conversation that contains the message you want to delete.  
 . Open the message by clicking in the line of the message.
 . Click on material:more_vert[].
 . Click on material:delete[] *Delete*. +
 → A window opens and you need to confirm your decision.
 . Click on *Yes*. +
 → The conversation is deleted and moved to <<#trash, trash>>.
+
+////
+TODO: FRAGE: Wird die einzelne gelöschte Nachricht auch in den Papierkorb verschoben? Konnte ich im System nicht nachstellen.
+////
 
 [#paypal-dispute]
 == Link to PayPal Dispute plugin
@@ -1119,6 +1157,10 @@ You can also use the group function in the *My messages* area. The group functio
 == Trash
 
 In the navigation on the left-hand side of the Messenger, you can find the folder material:delete[] *Trash*. Here you can find all <<#context-menu-delete-conversation, deleted conversations>> and all<<#delete-single-message, deleted messages>>.
+
+//// 
+TODO: Wird es in Zukunft möglich sein, alle Nachrichten aus dem Papierkorb mit einem Klick zu entfernen (so wie bei "Papierkorb leeren" in E-Mail-Programmen? Oder werden die Nachrichten automatisch nach einem bestimmten Zeitraum gelöscht? Wird es möglich sein, Nachrichten aus dem Papierkorb "zurückzuholen", wenn ich die Konversation bzw. Nachricht auf "nicht abgeschlossen" setze?
+////
 
 You can have the following columns displayed in the trash folder of the Messenger:
 
