--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -69,7 +69,7 @@ Import erstellen:
 [cols="1a,3a"]
 !===
 ! *Inaktiv*
-!  
+! Es werden keine Daten importiert.
 
 ! *20-minütig*; +
  *Stündlich*; +
