--- a/docs/de-de/modules/maerkte/pages/bol-com.adoc
+++ b/docs/de-de/modules/maerkte/pages/bol-com.adoc
@@ -316,6 +316,17 @@ a| Die Variante muss für den Marktplatz freigegeben sein.
   ** Herkunft *bol.com* = Du versendest deine Artikel selbst. +
   ** Herkunft *bol.com FBB* = Der Versand erfolgt durch bol.com.
 
+| Zustand
+|
+
+Im Tab *Global* des Artikels muss im Bereich *Grundeinstellungen* der *Zustand API* gespeichert sein.
+
+* 0 = NEW
+* 1,5 = AS_NEW
+* 2 = GOOD
+* 3 = MODERATE
+* 4 = REASONABLE
+
 |===
 
 [#link-category-property]
