Kathrin/bol com (#1236)
* Update bol-com.adoc

* Update bol-com.adoc

* push

--- a/docs/de-de/modules/maerkte/pages/bol-com.adoc
+++ b/docs/de-de/modules/maerkte/pages/bol-com.adoc
@@ -316,6 +316,17 @@ a| Die Variante muss für den Marktplatz freigegeben sein.
   ** Herkunft *bol.com* = Du versendest deine Artikel selbst. +
   ** Herkunft *bol.com FBB* = Der Versand erfolgt durch bol.com.
 
+| Zustand
+| * Im Tab *Global* des Artikels muss im Bereich *Grundeinstellungen* der *Zustand API* gespeichert sein. Dieser *Zustand API* wird beim Export der Angebotsdaten automatisch übertragen.
+
+Die plentymarkets Zustände werden wie folgt den bol.com-API-Zuständen zugeordnet:
+
+* *0 Neu* = NEW
+* *1 Gebraucht wie neu* = AS_NEW
+* *2 Gebraucht sehr gut* = GOOD
+* *3 Gebraucht gut* = MODERATE
+* *4 Gebraucht annehmbar* = REASONABLE
+
 |===
 
 [#link-category-property]
