--- a/docs/de-de/modules/automatisierung/pages/document-builder.adoc
+++ b/docs/de-de/modules/automatisierung/pages/document-builder.adoc
@@ -153,6 +153,8 @@ mulit
 | *Standardvorlage*
 |Wähle, ob die Vorlage eine Standardvorlage ist.
 
+| *Standort*??? überarbeiten!!
+|Wähle die ID des Standortes, wo die Vorlage liegt??? Du kannst hier auch mehrere Standorte wählen.
 |===
 
 .Steuerelemente
@@ -313,3 +315,13 @@ Overlay Ausgabeeinstellungen
 Canvas settings
 Neue side nav wird links im tree sein
 Editor: Widgets wählen und platzieren...
+V
+
+== Vorschau anzeigen (Notizen überarbeiten) - ask Isabela for more details
+
+Oben auf das Preview-Icon klicken
+Es öffnet sich ein Overlay "Vorschau Vorlage" (umbenennen?)
+Vorschau-Typ wählen (HTML...welche Optionen gibt es noch? PDF?)
+Auftrags-IDS eingeben
+unten auf button "Vorschau Vorlage + Preview-Icon" (blau) klicken
+Die Vorschau wird geladen und schließlich angezeigt
