--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -18,7 +18,7 @@ The *CRM » Messenger (Test phase)* menu is structured as follows:
 image::crm:messenger-menu-structure.png[width=640, height=360]
 
 * *Navigation*: Here you can navigate through different parts of the menu. The currently selected area (blue background) is displayed in the main window on the right. Click on material:menu[] to expand or collapse the navigation bar. +
-** Available areas in the navigation: <<#create-message, New message>>, <<#group-function, Inbox>>, <<#new-messages, New messages>>, <<#my-messages, My messages>>, <<#trash, Trash>>.
+** Available areas in the navigation: <<#create-message, New message>>, <<#group-function, Inbox>>, <<#new-messages, New messages>>, <<#my-messages, My messages>>, <<#trash, Trash>>. The number behind the names of the individual areas shows the number of unread messages.
 * *Toolbar*: Here you can <<#search-conversation, search>> for conversations, <<#configure-columns, adjust the columns in the overview>>, set the results to be shown per page and click through the pages with the conversations.
 * *Main window*: Here you can see whichever area is currently open. +
 ** *Overview*: When you start a search, you’ll see the results in an overview. The overview provides information about the conversations found at a glance. You see, for example, the email addresses of the senders, the subject, the date when the message was received, the assigned tags and by means of the icon material:attach_file[], you can see whether the message has an attachment. +
