--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -47,7 +47,7 @@ Wenn Benutzer:innen vom Typ *Backend* mit dem Messenger arbeiten sollen, muss ei
 [#benutzerrechte-backend-benutzer]
 === Rechte für Backend-Benutzer:innen vergeben
 
-// TODO: Berechtigungen anpassen (siehe Sprint-Karte)
+// TODO: Berechtigungen prüfen
 
 :rights-purpose: Nachrichten im Messenger sehen und erstellen
 :right-one: pass:quotes[*CRM > Nachricht > Anzeigen*]
@@ -133,7 +133,7 @@ Wähle nach Eingabe der Zugangsdaten die Verschlüsselung und gib die Absender-E
 
 *_Hinweis für Postfächer bei mailbox.org:_* Gib den Port *465* ein und wähle als Verschlüsselung die Einstellung *SSL*.
 
-// TODO: (hier noch mehr erklären) Aktiviere (material:check_box[role=skyBlue]) die Checkbox, um das Standardpostfach zu wählen.
+// TODO: Aktiviere (material:check_box[role=skyBlue]) die Checkbox, um das Standardpostfach für alle Nachrichten zu wählen.
 
 ////
 TODO: ggf. neue Tabelle einfügen mit aktuellen Zahlen analog zu dieser Tabelle hier: https://knowledge.plentymarkets.com/crm/e-mails-versenden#200
@@ -505,6 +505,14 @@ Die xref:payment:beta-zahlungen-verwalten-neu.adoc#[Zahlung] hat eine direkte Ve
 
 Über die Schaltfläche *Spalten konfigurieren* (material:settings[]) ganz oben rechts in der Übersicht kannst du bereits angezeigte Spalten in der Übersicht wieder deaktivieren.
 
+[#benachrichtigung-neue-nachricht]
+== Benachrichtigungen über neue Nachrichten 
+
+Wenn du das Menü *CRM » Messenger (Testphase*) öffnest siehst du bei Eingang neuer Nachrichten die Anzahl der neuen Nachrichten über das Symbol material:notifications[]. Mit einem Klick auf material:notifications[] öffnet sich das Benachrichtigungsfenster.
+
+Im Bereich material:info[] *Neue Messenger-Nachricht* siehst du den Betreff der Nachricht und wann die Nachricht gesendet wurde. Klicke auf material:link[] *Nachricht öffnen*, um die Nachricht im Messenger zu öffnen. +
+Klicke auf material:more_vert[] und dann auf material:delete[] *Schließen*, um die Benachrichtigung für diese Nachricht zu entfernen. Die Zahl bei dem Symbol material:notifications[] reduziert sich also um 1.
+
 [#auf-nachricht-antworten]
 == Auf eine bestehende Nachricht antworten
 
@@ -754,10 +762,6 @@ Konversation abonnieren:
 . Klicke in die Zeile der Konversation, die du abonnieren möchtest, auf material:more_vert[].
 . Klicke auf material:notifications_active[] *Konversation abonnieren*. +
 → In der Spalte material:notifications[] *Abonniert* wird das Symbol material:done[] angezeigt.
-
-////
-TODO: ist das korrekt? → Du erhältst oben rechts in deinem plentymarkets Backend eine Benachrichtigung über das Symbol material:notifications[].
-////
 
 [#konversation-nicht-abonnieren]
 ==== Konversation nicht mehr abonnieren
