ADD address to be shown

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -490,8 +490,14 @@ Einstellungen
 | **Jeden Artikel einzeln erfassen** = Bei mehreren Artikeln muss jeder Artikel einzeln erfasst werden. +
 1-100 = Nachdem die gewählte Anzahl des Artikels erfasst wurde, wird die Restmenge automatisch erfasst.
 
+| *Anzuzeigende Adresse*
+|Wähle, ob die Lieferadresse oder die Rechnungsadresse des Auftrags in der Detailansicht angezeigt werden soll.
+
 | **Pickliste automatisch schließen**
 |Aktivieren, um vollständig abgearbeitete Picklisten im Prozess automatisch zu schließen.
+
+| *Pickliste automatisch in Bearbeitungsstatus setzen*
+|Setzt die Pickliste in den Status *In Bearbeitung*. Diese Einstellung ist standardmäßig aktiv.
 
 | **Schaltfläche Ausführen anzeigen**
 |Aktivieren, um in der Prozessausführung eine Schaltfläche anzuzeigen, über den zu einer anderen Aktion gesprungen werden kann.
@@ -1141,7 +1147,7 @@ Verfügbare Subaktionen für diese Aktion:
 ==== Hochgeladene Dokumente
 
 Mit der Aktion *Hochgeladene Dokumente* können alle hochgeladenen Dokumente für einen Auftrag per Subaktion automatisch zum Beispiel gedruckt oder gespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente. +
-Eigene Dokumente lädst du im Menü *Aufträge » Aufträge (Testphase)* herunter. Öffne dazu einen Auftrag und gehe in den Bereich *Dokumente*. Klicke oben auf *Dokument erstellen* (material:add[]) und wähle die Option *Externes Dokument* (material:file_download[]). 
+Eigene Dokumente lädst du im Menü *Aufträge » Aufträge (Testphase)* herunter. Öffne dazu einen Auftrag und gehe in den Bereich *Dokumente*. Klicke oben auf *Dokument erstellen* (material:add[]) und wähle die Option *Externes Dokument* (material:file_download[]).
 
 
 [.subhead]
