--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -44,7 +44,7 @@ The same access data is used for all platforms.
 [TIP]
 .Amazon platforms
 ====
-With plentymarkets, you can sell on the Amazon platforms Amazon.de, Amazon.ae, Amazon.ca, Amazon.co.uk, Amazon.com, Amazon.com.mx, Amazon.es, Amazon.fr, Amazon.it, Amazon.nl, Amazon.pl, Amazon.se, and Amazon.tr.
+With plentymarkets, you can sell on the platforms Amazon.de, Amazon.ae, Amazon.ca, Amazon.co.uk, Amazon.com, Amazon.com.mx, Amazon.es, Amazon.fr, Amazon.it, Amazon.nl, Amazon.pl, Amazon.se, and Amazon.tr.
 ====
 
 [#10]
@@ -101,12 +101,12 @@ Carrying out Amazon specific shipping profile settings:
 [#1500]
 == Activating the data exchange
 
-This chapter describes the settings that need to be configured in order to exchange data between your plentymarkets system and Amazon. You will learn how to manually import Amazon orders with a CSV file, how to send shipping confirmations to Amazon, how to synchronise FBA stock, and how to reset order reports from Amazon.
+This chapter describes the settings that need to be configured in order to exchange data between your plentymarkets system and Amazon. You can import Amazon orders manually via a CSV file. Third, you will learn how to send shipping confirmations to Amazon, how to synchronise FBA stock and how to reset order reports from Amazon.
 
 [#1900]
 === Importing Amazon orders
 
-Go to *Setup » Markets » Amazon » Data exchange » Order import* to set up the import of Amazon orders. In this menu, orders can be imported manually with a CSV file.
+Go to *Setup » Markets » Amazon » Data exchange » Order import* to set up the import of Amazon orders. Here, you can import orders manually via a CSV file.
 
 Proceed as follows to set up the manual import of Amazon orders.
 
@@ -279,7 +279,7 @@ Reports can have the following statuses: +
 However, note that resetting too many or too large reports might affect your system’s capacity. This might result in new reports being processed later. +
 * *Skip report* (material:skip_next[]): The report is skipped. If you skip a report, it will not be processed. It is not possible to download the report if it was skipped. +
 Skipping reports might be useful if you want to reduce your system’s workload. Besides that, you can define which reports should be processed next, as the next reports in the queue will be processed if you skip reports. +
-However, note that you cannot skip reports which are already being processed in the background. +
+However, note that reports that are already being processed in the background cannot be skipped. +
 
 *_Note:_* Reports which are older than 31 days (minus 6h) cannot be downloaded, reset, or skipped.
 |===
@@ -466,7 +466,7 @@ Use event procedures to initiate refunds in plentymarkets. The automatic credit 
 
 | *Filter*
 | *Order > Referrer*
-| *Amazon* or a suitable Amazon sub-referrer, for example Amazon France +
+| *Amazon* or a suitable Amazon sub-referrer, for example Amazon France. +
 *_Note:_* Do not select an Amazon FBA referrer such as Amazon FBA Germany for the *Order > Referrer* filter if you use the automatic credit note import.
 
 | *Procedure*
