--- a/docs/en-gb/modules/markets/pages/limango-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/limango-setup.adoc
@@ -69,7 +69,7 @@ include::partial$plugin-installation.adoc[]
 [#300]
 == Setting up the market in plentymarkets
 
-After you have installed the limango plugin, set up the market in plentymarkets.
+Installed the limango plugin? Great. Now, set up the market in plentymarkets.
 
 === Carrying out the basic settings
 
@@ -272,7 +272,7 @@ etc.)
 
 Material information is exported to limango using a property of the type *Text*. Create a separate property for each marketplace data field.
 
-* link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/maerkte/assets/limango-material-composite-types.txt[Valid values for material composite types^]{nbsp}icon:external-link[]
+* link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/maerkte/assets/limango-material-composite-types.txt[Valid values for material composite types^]
 
 Link the properties to the main variation of the item and save all components of a material mix in this property. If the variations of the same item have different material mixes, deactivate the inheritance function for properties and save the material mixes separately for each variation. However, note that this deactivates the inheritance for all properties for the item. As such, you also need to manually manage all other properties for each variation.
 
@@ -284,7 +284,7 @@ Enter the material composition in the following format:
 
 The values for material types must be identical to the values that limango allows:
 
-* link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/maerkte/assets/limango-material-types.txt[Valid values for material types^]{nbsp}icon:external-link[]
+* link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/maerkte/assets/limango-material-types.txt[Valid values for material types^]
 
 [.collapseBox]
 .*_Example:_* Exporting material information for a blazer to limango
@@ -318,7 +318,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Upper shoe materials
 * Section: Item
-* Type: Multi selection
+* Type: Multi-selection
 * Selection values:
   ** other-material
   ** leather
@@ -333,7 +333,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Lining shoe materials
 * Section: Item
-* Type: Multi selection
+* Type: Multi-selection
 * Selection values:
   ** other-material
   ** leather
@@ -348,7 +348,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Insole shoe materials
 * Section: Item
-* Type: Multi selection
+* Type: Multi-selection
 * Selection values:
   ** other-material
   ** leather
@@ -363,7 +363,7 @@ Mapping lining and saving material mix for a variation:
 . Create a property with the following settings:
 * Name: Shoes: Outsole shoe materials
 * Section: Item
-* Type: Multi selection
+* Type: Multi-selection
 * Selection values:
   ** other-material
   ** leather
@@ -373,7 +373,7 @@ Mapping lining and saving material mix for a variation:
 . Select the property value that suits the variation.
 
 | RRP
-| . Link a sales price of the price type *RRP* to the variations.
+| . Link a sales price of the price type *RRP* for the referrer *{market}* to the variations.
 . Save a price.
 
 *_Specify the RRP based on the following logic:_*
@@ -381,7 +381,7 @@ Mapping lining and saving material mix for a variation:
 * The RRP cannot be lower than the gross sales price.
 
 | Gross sales price
-| . Link a sales price with no price type to the variations. +
+| . Link the sales price for the referrer {market} to the variations. +
 . Save a price.
 
 | Category
