--- a/docs/de-de/modules/automatisierung/pages/document-builder.adoc
+++ b/docs/de-de/modules/automatisierung/pages/document-builder.adoc
@@ -153,8 +153,8 @@ mulit
 | *Standardvorlage*
 |Wähle, ob die Vorlage eine Standardvorlage ist.
 
-| *Standort*??? überarbeiten!!
-|Wähle die ID des Standortes, wo die Vorlage liegt??? Du kannst hier auch mehrere Standorte wählen.
+| *Standort*
+|Wähle den Standort des Mandanten. Du kannst hier auch mehrere Standorte wählen.
 |===
 
 .Steuerelemente
@@ -203,11 +203,12 @@ Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und ein
 In der Übersicht des DocumentBuilders kannst du Gruppenfunktionen verwenden, um bestimmte Aktionen für mehrere Vorlagen gleichzeitig auszuführen. Die folgende Tabelle listet alle verfügbaren Gruppenfunktionen.
 
 //welche Gruppenfunktionen wird es geben?
-Öffnen
-Löschen
+Vorlagen öffnen/Open templates (material:file_open)
+Vorlagen löschen/Delete templates (material:delete[])
 ((De)Aktivierung?)
 
-
+Vorlagen wählen (anhaken), dann oben die Gruppenfunktion wählen.
+Gruppenfunktionen in Tabelle aufführen.
 
 [#vorlage-erstellen]
 == Vorlagen erstellen
@@ -319,9 +320,17 @@ V
 
 == Vorschau anzeigen (Notizen überarbeiten) - ask Isabela for more details
 
-Oben auf das Preview-Icon klicken
-Es öffnet sich ein Overlay "Vorschau Vorlage" (umbenennen?)
-Vorschau-Typ wählen (HTML...welche Optionen gibt es noch? PDF?)
+Oben auf das Preview-Icon klicken (material:remove_red_eye[])
+Es öffnet sich ein Overlay "Vorschau Vorlage anzeigen"
+Vorschau-Format wählen (HTML oder PDF)
 Auftrags-IDS eingeben
-unten auf button "Vorschau Vorlage + Preview-Icon" (blau) klicken
-Die Vorschau wird geladen und schließlich angezeigt
+unten auf button "Vorschau Vorlage anzeigen" (material:remove_red_eye[role=skyBlue]) klicken
+Die Vorschau wird geladen und angezeigt
+
+Labels:
+
+Preview template - Vorschau Vorlage anzeigen
+Template preview HTML - HTML-Vorschau Vorlage
+Template preview PDF - PDF-Vorschau Vorlage
+Preview format - Vorschau-Format
+Order ID - Auftrags-ID
