ADJUST address selection

--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -491,7 +491,7 @@ Settings
 1-100 = After the selected quantity of items was scanned, the rest is added automatically.
 
 | *Address to be shown*
-|Select whether the delivery address or the invoice address of the order should be displayed in the detail view.
+|Select whether the invoice address (default setting) or the delivery address of the order should be displayed in the detail view.
 
 | **Close pick list automatically**
 |Activate to close incomplete pick lists in the process automatically.
