--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -108,6 +108,8 @@ The event *New return (by customer)* refers to returns that are initiated by cus
 | *New OpenTrans order*
 |The event procedure is triggered when a new OpenTrans order is created.
 
+| *Order address changed*
+|The event procedure is triggered when the invoice address or the delivery address of an order is changed.
 |====
 
 [#events-documents]
