Make Shopify app documentation visible

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -374,6 +374,7 @@
 ** xref:webshop:webshop-plugins.adoc[Weitere Webshop-Plugins]
 ** xref:webshop:webshop-einrichten.adoc[Alt: Callisto-Webshop einrichten]
 * Externe Webshops
+** xref:externe-webshops:shopify-app.adoc[Shopify-App]
 ** xref:externe-webshops:shopify-plugin.adoc[Shopify-Plugin]
 ** xref:externe-webshops:woocommerce.adoc[WooCommerce-Plugin]
 * xref:maerkte:maerkte.adoc[Märkte und Preisportale]
