--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -358,6 +358,7 @@
 *** xref:online-store:template-variables-in-ceres.adoc[ElasticSearch result fields]
 ** xref:online-store:setting-up-online-store.adoc[Old: Setting up Callisto online store]
 * External online shops
+** xref:external-online-shops:shopify-app.adoc[Shopify app]
 ** xref:external-online-shops:shopify-plugin.adoc[Shopify plugin]
 ** xref:external-online-shops:woocommerce.adoc[WooCommerce]
 * xref:markets:markets.adoc[Markets and price search engines]
