remove newsletter + cleverreach setting from new systems

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -109,11 +109,11 @@
 ** xref:crm:e-mails-versenden.adoc[E-Mails]
 ** xref:crm:op-liste.adoc[Offene Posten]
 ** xref:crm:ticketsystem-nutzen.adoc[Ticketsystem]
-** xref:crm:newsletter-versenden.adoc[Newsletter]
 ** xref:crm:faq.adoc[FAQ: CRM]
 ** xref:crm:praxisbeispiele.adoc[Praxisbeispiele]
 *** xref:crm:praxisbeispiel-tracking-url-senden.adoc[Tracking-URL an Kund:innen senden]
 *** xref:crm:praxisbeispiel-migration-vorlagen.adoc[EmailBuilder: Todo nach Migration der alten E-Mail-Vorlagen]
+** xref:crm:newsletter-versenden.adoc[Newsletter (altes Tool)]
 ** xref:crm:kontakte-verwalten.adoc[Kontakte (altes Tool)]
 * xref:auftraege:auftraege.adoc[Aufträge]
 ** xref:auftraege:grundeinstellungen.adoc[Grundeinstellungen]
