--- a/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
@@ -1,8 +1,22 @@
-= Newsletter
+= Newsletter (altes Tool)
 :keywords: Newsletter, Double-Opt-In-Funktion, Newsletter Vorlage, Sichtbarkeit Newsletter, E-Mail-Ordner, CleverReach
 :description: Erfahre, wie du Newsletter über plentymarkets an deine Kund:innen versendest.
 :id: JIHLVCR
 :author: team-crm
+
+[IMPORTANT]
+.Newsletter und CleverReach werden nicht mehr weiterentwickelt
+====
+Der in plentymarkets integrierte Newsletter sowie die Schnittstelle zu <<#1700, CleverReach>> werden nicht mehr weiterentwickelt. Wenn du plentymarkets schon länger nutzt, kannst die im Folgenden aufgelisteten Menüs weiterhin sehen und nutzen. Erweiterungen und Neuerungen werden aber nicht mehr vorgenommen.
+
+* CRM » Newsletter
+* Einrichtung » Mandant » [Mandant wählen] » E-Mail » Newsletter
+* Einrichtung » CRM » Newsletter » CleverReach
+
+Bei Systemen, die seit September 2022 ausgeliefert werden, sind die oben genannten Menüpunkte nicht mehr sichtbar.
+
+Wir empfehlen dir, ein Newsletter-Plugin zu nutzen. Du findest alle verfügbaren Newsletter-Plugins im link:https://marketplace.plentymarkets.com/[plentyMarketplace^]. Ein Datum für das Ende der Bereitstellung des in plentymarkets integrierten Newsletters und CleverReach folgt in Kürze.
+====
 
 Auf dieser Handbuchseite ist beschrieben, welche Einstellungen du vornehmen musst, um Newsletter mit plentymarkets an deine xref:crm:kontakte.adoc#[Kontakte] zu versenden. Versende deine Newsletter z.B. mit dem in plentymarkets xref:crm:newsletter-versenden.adoc#100[integrierten Newsletter-Dienst], über die integrierte Schnittstelle zu xref:crm:newsletter-versenden.adoc#1700[CleverReach] oder übere weitere im link:https://marketplace.plentymarkets.com/plugins/integration[plentyMarketplace^] verfügbare E-Mail-Marketing- und Newsletter-Plugins.
 
