--- a/docs/en-gb/modules/crm/pages/sending-newsletters.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-newsletters.adoc
@@ -1,8 +1,22 @@
-= Newsletters
+= Newsletters (old tool)
 :keywords: newsletter, double opt-in, newsletter, newsletter template, visibility newsletter, email folder, newsletter login details, CleverReach
 :description: Learn how to use plentymarkets to send newsletters to your customers.
 :id: JIHLVCR
 :author: team-crm
+
+[IMPORTANT]
+.No new features planned for integrated newsletter and CleverReach
+====
+The newsletter integrated in plentymarkets and the <<#1700, CleverReach>> interface will not be developed any further. If you have been using plentymarkets for a while already, you can still see and use the menus listed in the following. However, no new features or extensions will be implemented.
+
+* CRM » Newsletter
+* Setup » Client » [Select client] » Email » Newsletter
+* Setup » CRM » Newsletter » CleverReach
+
+The above listed menus are no longer visible for systems that have been delivered since September 2022.
+
+We recommend using a newsletter plugin. You can find all available newsletter plugins in the link:https://marketplace.plentymarkets.com/en/[plentyMarketplace^]. We will publish an end-of-life date for the integrated newsletter and CleverReach soon.
+====
 
 This page of the manual describes which settings you need to carry out to send newsletters with plentymarkets to your xref:crm:contacts.adoc#[contacts]. Send your newsletters e.g. with the xref:crm:sending-newsletters.adoc#100[newsletter service integrated in plentymarkets], via the integrated interface to xref:crm:sending-newsletters.adoc#1700[CleverReach] or via other email marketing and newsletter plugins available in the link:https://marketplace.plentymarkets.com/en/plugins/integration[plentyMarketplace^].
 
