ADD more work to the inheritance page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -44,10 +44,20 @@ xref:artikel:struktur.adoc#[Weitere Informationen].
 --
 
 [.collapseBox]
-.*Was ist mit dem Begriff "Vererbung" gemeint?*
+.*Was ist eine Hauptvariante?*
+--
+
+include::page$vererbung.adoc[tag=what-is-main-variation]
+
+--
+
+[.collapseBox]
+.*Was ist Vererbung?*
 --
 
 include::page$vererbung.adoc[tag=inheritance-preamble]
+
+xref:artikel:vererbung.adoc#[Weitere Informationen].
 
 --
 
